Additions:

Changes:
Updated to Fireplace Lib 5.2+

Fixes/Internal Changes: